--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="order-1 md:order-2 flex justify-center relative">
                 <div class="absolute inset-0 bg-accent/20 blur-3xl rounded-full transform scale-75"></div>
                 <div class="relative w-64 h-64 md:w-80 md:h-80 rounded-full border-2 border-slate-700 p-2 glass">
-                    <img src="C:\Users\FLEXBOY\Downloads\profile.jpg" alt="Wonjoon Hwang" class="w-full h-full object-cover rounded-full grayscale hover:grayscale-0 transition duration-500">
+                    <img src=".\profile.jpg" alt="Wonjoon Hwang" class="w-full h-full object-cover rounded-full grayscale hover:grayscale-0 transition duration-500">
                 </div>
             </div>
         </div>
@@ -416,4 +416,5 @@
         }
     </script>
 </body>
+
 </html>
